--- a/packages/pilot/package.json
+++ b/packages/pilot/package.json
@@ -36,7 +36,8 @@
     "redux-actions": "2.2.1",
     "redux-localstorage-simple": "^2.0.0",
     "redux-observable": "0.18.0",
-    "rxjs": "5.5.6"
+    "rxjs": "5.5.6",
+    "validator": "10.8.0"
   },
   "devDependencies": {
     "@percy-io/in-percy": "0.1.10",
